@@ -1,6 +1,8 @@
 package it.unibo.monopoly.model.transactions;
 
+import java.util.List;
 import java.util.Set;
+import java.util.function.Function;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -12,15 +14,24 @@ import org.junit.jupiter.api.Test;
 
 import com.google.common.collect.Sets;
 
+import it.unibo.monopoly.model.gameboard.impl.BuildablePropertyImpl;
 import it.unibo.monopoly.model.gameboard.impl.Group;
+import it.unibo.monopoly.model.gameboard.impl.ImmutableProperty;
+import it.unibo.monopoly.model.gameboard.impl.NormalPropertyImpl;
 import it.unibo.monopoly.model.transactions.api.Bank;
 import it.unibo.monopoly.model.transactions.api.BankAccount;
+import it.unibo.monopoly.model.transactions.api.PropertyAction;
+import it.unibo.monopoly.model.transactions.api.PropertyActionsEnum;
+import it.unibo.monopoly.model.transactions.api.RentOption;
 import it.unibo.monopoly.model.transactions.api.TitleDeed;
 import it.unibo.monopoly.model.transactions.impl.BankImpl;
-import it.unibo.monopoly.model.transactions.impl.BaseTitleDeed;
 import it.unibo.monopoly.model.transactions.impl.ImmutableTitleDeedCopy;
 import it.unibo.monopoly.model.transactions.impl.bankaccount.ImmutableBankAccountCopy;
 import it.unibo.monopoly.model.transactions.impl.bankaccount.SimpleBankAccountImpl;
+import it.unibo.monopoly.model.transactions.impl.rentoption.RentOptionFactoryImpl;
+import it.unibo.monopoly.model.transactions.impl.titledeed.BaseTitleDeed;
+import it.unibo.monopoly.model.transactions.impl.titledeed.TitleDeedWithHouses;
+import it.unibo.monopoly.model.turnation.impl.PositionImpl;
 
 /*
  * Tests to verify correct functionality of
@@ -28,20 +39,43 @@ import it.unibo.monopoly.model.transactions.impl.bankaccount.SimpleBankAccountIm
  */
 class BankTest {
 
-    private static final int AMOUNT = 100;
+    private static final int AMOUNT = 1000;
     private static final int ID_1 = 21;
     private static final int ID_2 = 42;
     private static final int DICE_THROW = 12;
     private static final String TITLE_DEED_NAME1 = "Bastoni Gran Sasso";
     private static final String TITLE_DEED_NAME2 = "Viale Monterosa";
+    private static final String TITLE_DEED_NAME3 = "CITTA3";
+    private static final int PROPERTY_SALE_PRICE1 = 50;
+    private static final int PROPERTY_SALE_PRICE2 = 60;
+    private static final int BASE_RENT = 10;
+    private static final int NHOUSES = 4;
+    private static final int HOUSE_PRICE_INT = 20;
+    private static final int HOTEL_PRICE_INT = 20;
+    private static final Function<Integer, Integer> HOUSE_PRICE = d -> HOUSE_PRICE_INT;
+    private static final Function<Integer, Integer> HOTEL_PRICE = d -> HOTEL_PRICE_INT;
+    private static final int BASE_RENT_PRICE = 2;
+    private final BuildablePropertyImpl referencedProperty = new BuildablePropertyImpl(
+        new NormalPropertyImpl(TITLE_DEED_NAME3, new PositionImpl(4), Group.GREEN));
+    private final ImmutableProperty property = new ImmutableProperty(referencedProperty);
+    private final TitleDeed decorated = new BaseTitleDeed(Group.GREEN, 
+                                                            TITLE_DEED_NAME3, PROPERTY_SALE_PRICE2, 
+                                                            s -> s / 2, BASE_RENT);
+    private final List<RentOption> housesOptions = new RentOptionFactoryImpl()
+                                                        .housesAndHotelsOptions(BASE_RENT_PRICE, 
+                                                                                NHOUSES, 
+                                                                                true);
+
 
     private final Set<BankAccount> accounts = Set.of(
         new SimpleBankAccountImpl(ID_1, AMOUNT, e -> true),
         new SimpleBankAccountImpl(ID_2, AMOUNT, e -> true)
     );
     private final Set<TitleDeed> deeds = Set.of(
-        new BaseTitleDeed(Group.GREEN, TITLE_DEED_NAME1, 50, s -> s / 2, 10),
-        new BaseTitleDeed(Group.GREEN, TITLE_DEED_NAME2, 60, s -> s / 2, 10)
+        new BaseTitleDeed(Group.GREEN, TITLE_DEED_NAME1, PROPERTY_SALE_PRICE1, s -> s / 2, BASE_RENT),
+        new BaseTitleDeed(Group.GREEN, TITLE_DEED_NAME2, PROPERTY_SALE_PRICE2, s -> s / 2, BASE_RENT),
+
+        new TitleDeedWithHouses(decorated, housesOptions, property, HOUSE_PRICE, HOTEL_PRICE)
     );
     private Bank bank;
 
@@ -78,7 +112,7 @@ class BankTest {
                     .filter(a -> ID_1 == a.getID())
                     .map(a -> new ImmutableBankAccountCopy(a))
                     .toList()
-                    .getFirst(), account);
+                    .get(0), account);
     }
 
     @Test
@@ -97,7 +131,27 @@ class BankTest {
                     .filter(d -> TITLE_DEED_NAME1.equals(d.getName()))
                     .map(d -> new ImmutableTitleDeedCopy(d))
                     .toList()
-                    .getFirst(), deed);
+                    .get(0), deed);
+    }
+
+    @Test
+    void checkGetApplicableActionsForTitleDeedRetrievesCorrectActions() {
+        final Set<PropertyAction> buyAction = bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
+        assertTrue(buyAction.stream().allMatch(a -> a.getType() == PropertyActionsEnum.BUY));
+        bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
+        final Set<PropertyAction> sell = bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
+        assertTrue(sell.stream().allMatch(a -> a.getType() == PropertyActionsEnum.SELL));
+        bank.buyTitleDeed(TITLE_DEED_NAME2, ID_1);
+        bank.buyTitleDeed(TITLE_DEED_NAME3, ID_1);
+        final Set<PropertyAction> housesActions = bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
+        assertTrue(housesActions.stream().anyMatch(a -> a.getType() == PropertyActionsEnum.BUYHOTEL));
+        assertTrue(housesActions.stream().anyMatch(a -> a.getType() == PropertyActionsEnum.BUYHOUSE));
+        assertTrue(housesActions.stream().anyMatch(a -> a.getType() == PropertyActionsEnum.SELLHOTEL));
+        assertTrue(housesActions.stream().anyMatch(a -> a.getType() == PropertyActionsEnum.SELLHOUSE));
+        assertTrue(housesActions.stream().anyMatch(a -> a.getType() == PropertyActionsEnum.SELL));
+        bank.getBankStateObject().resetTransactionData();
+        final Set<PropertyAction> payRent = bank.getApplicableActionsForTitleDeed(ID_2, TITLE_DEED_NAME1, DICE_THROW);
+        assertTrue(payRent.stream().allMatch(a -> a.getType() == PropertyActionsEnum.PAYRENT));
     }
 
     @Test 
@@ -129,7 +183,7 @@ class BankTest {
 
     @Test
     void payRentForPropertyPossessedByThePayer() {
-        bank.getBankStateObject().resetTransactionData();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
         bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
         assertTrue(bank.getTitleDeed(TITLE_DEED_NAME1).isOwned());
         assertEquals(ID_1, bank.getTitleDeed(TITLE_DEED_NAME1).getOwnerId());
@@ -142,7 +196,7 @@ class BankTest {
 
     @Test
     void payRentSuccessful() {
-        bank.getBankStateObject().resetTransactionData();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
         bank.buyTitleDeed(TITLE_DEED_NAME1, ID_2);
         final int rent = bank.getTitleDeed(TITLE_DEED_NAME1)
                                                 .getRent(Sets.filter(Sets.newHashSet(deeds), 
@@ -178,7 +232,7 @@ class BankTest {
 
     @Test
     void buyAlreadyBoughtProperty() {
-        bank.getBankStateObject().resetTransactionData();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
         bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
         assertTrue(bank.getTitleDeed(TITLE_DEED_NAME1).isOwned());
         assertEquals(ID_1, bank.getTitleDeed(TITLE_DEED_NAME1).getOwnerId());
@@ -193,7 +247,7 @@ class BankTest {
     @Test 
     void buyingPropertySuccessful() {
         final int previousBalance = bank.getBankAccount(ID_1).getBalance();
-        bank.getBankStateObject().resetTransactionData();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
         bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
         assertTrue(bank.getTitleDeed(TITLE_DEED_NAME1).isOwned());
         assertEquals(ID_1, bank.getTitleDeed(TITLE_DEED_NAME1).getOwnerId());
@@ -221,12 +275,13 @@ class BankTest {
     @Test
     void sellPropertySuccessful() {
         final int previousBalance = bank.getBankAccount(ID_1).getBalance();
-        bank.getBankStateObject().resetTransactionData();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
         bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
         assertTrue(bank.getTitleDeed(TITLE_DEED_NAME1).isOwned());
         assertEquals(ID_1, bank.getTitleDeed(TITLE_DEED_NAME1).getOwnerId());
         final int expectedBalanceAfterPurchase = previousBalance - bank.getTitleDeed(TITLE_DEED_NAME1).getSalePrice();
         assertEquals(expectedBalanceAfterPurchase, bank.getBankAccount(ID_1).getBalance());
+        bank.getBankStateObject().resetTransactionData();
         bank.sellTitleDeed(TITLE_DEED_NAME1);
         final int expectedBalanceAfterSale = expectedBalanceAfterPurchase + bank.getTitleDeed(TITLE_DEED_NAME1)
                                                                                 .getMortgagePrice();
@@ -236,7 +291,7 @@ class BankTest {
 
     @Test
     void testGetTitleDeedsByOwner() {
-        bank.getBankStateObject().resetTransactionData();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
         bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
         final Set<TitleDeed> deeds = bank.getTitleDeedsByOwner(ID_1);
         assertFalse(deeds.isEmpty());
@@ -247,4 +302,53 @@ class BankTest {
         assertNotNull(exception.getMessage());
         assertFalse(exception.getMessage().isBlank());
     }
+
+    @Test
+    void testBuyHouse() {
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME2, DICE_THROW);
+        bank.buyTitleDeed(TITLE_DEED_NAME2, ID_1);
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
+        bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
+
+        final int amount = bank.getBankAccount(ID_1).getBalance();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME3, DICE_THROW);
+        bank.buyTitleDeed(TITLE_DEED_NAME3, ID_1);
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME3, DICE_THROW);
+        bank.buyHouse(TITLE_DEED_NAME3);
+
+        assertEquals(amount - PROPERTY_SALE_PRICE2 - HOUSE_PRICE.apply(ID_1), bank.getBankAccount(ID_1).getBalance());
+    }
+
+    @Test
+    void testBuyHotel() {
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME2, DICE_THROW);
+        bank.buyTitleDeed(TITLE_DEED_NAME2, ID_1);
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME1, DICE_THROW);
+        bank.buyTitleDeed(TITLE_DEED_NAME1, ID_1);
+
+        final int amount = bank.getBankAccount(ID_1).getBalance();
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME3, DICE_THROW);
+        bank.buyTitleDeed(TITLE_DEED_NAME3, ID_1);
+        bank.getApplicableActionsForTitleDeed(ID_1, TITLE_DEED_NAME3, DICE_THROW);
+        bank.buyHotel(TITLE_DEED_NAME3);
+
+        assertEquals(amount - PROPERTY_SALE_PRICE2 - HOTEL_PRICE.apply(ID_1), bank.getBankAccount(ID_1).getBalance());
+    }
+
+    @Test
+    void testBuyHouseWithoutOwnership() {
+        final IllegalStateException e = assertThrows(IllegalStateException.class, () -> 
+            bank.buyHouse(TITLE_DEED_NAME3)
+        );
+        assertTrue(e.getMessage().contains("Cannot place a house on a property with no owner"));
+    }
+
+    @Test
+    void testBuyHotelWithoutOwnership() {
+        final IllegalStateException e = assertThrows(IllegalStateException.class, () -> 
+            bank.buyHotel(TITLE_DEED_NAME3)
+        );
+        assertTrue(e.getMessage().contains("Cannot place a house on a property with no owner"));
+    }
+
 } 
