@@ -15,8 +15,8 @@ import it.unibo.monopoly.model.gameboard.impl.Group;
 import it.unibo.monopoly.model.transactions.api.RentOption;
 import it.unibo.monopoly.model.transactions.api.RentOptionFactory;
 import it.unibo.monopoly.model.transactions.api.TitleDeed;
-import it.unibo.monopoly.model.transactions.impl.BaseTitleDeed;
-import it.unibo.monopoly.model.transactions.impl.RentOptionFactoryImpl;
+import it.unibo.monopoly.model.transactions.impl.rentoption.RentOptionFactoryImpl;
+import it.unibo.monopoly.model.transactions.impl.titledeed.BaseTitleDeed;
 
 class RentOptionFactoryTest {
 
@@ -40,12 +40,12 @@ class RentOptionFactoryTest {
             new BaseTitleDeed(Group.GREEN, "vicolo corto", START_RENT * 10, s -> s / 2, START_RENT, List.of(doubledPrice)),
             new BaseTitleDeed(Group.GREEN, "vicolo stretto", START_RENT * 10, s -> s / 2, START_RENT, List.of(doubledPrice))
         );
-        deeds.getFirst().setOwner(OWNER_ID);
-        assertFalse(doubledPrice.canBeApplied(Set.copyOf(deeds), OWNER_ID));
-        assertEquals(START_RENT, deeds.getFirst().getRent(Set.copyOf(deeds), DICE));
-        deeds.getLast().setOwner(OWNER_ID);
-        assertTrue(doubledPrice.canBeApplied(Set.copyOf(deeds), OWNER_ID));
-        assertEquals(START_RENT * 2, deeds.getFirst().getRent(Set.copyOf(deeds), DICE));
+        deeds.get(0).setOwner(OWNER_ID);
+        assertFalse(doubledPrice.canBeApplied(Set.copyOf(deeds), OWNER_ID, null));
+        assertEquals(START_RENT, deeds.get(0).getRent(Set.copyOf(deeds), DICE));
+        deeds.get(deeds.size() - 1).setOwner(OWNER_ID);
+        assertTrue(doubledPrice.canBeApplied(Set.copyOf(deeds), OWNER_ID, null));
+        assertEquals(START_RENT * 2, deeds.get(0).getRent(Set.copyOf(deeds), DICE));
     }
 
     @Test
@@ -68,9 +68,9 @@ class RentOptionFactoryTest {
             deed.setOwner(OWNER_ID);
             for (int j = 0; j < options.size(); j++) {
                 if (j <= i) {
-                    assertTrue(options.get(j).canBeApplied(Set.copyOf(deeds), OWNER_ID));
+                    assertTrue(options.get(j).canBeApplied(Set.copyOf(deeds), OWNER_ID, null));
                 } else {
-                    assertFalse(options.get(j).canBeApplied(Set.copyOf(deeds), OWNER_ID));
+                    assertFalse(options.get(j).canBeApplied(Set.copyOf(deeds), OWNER_ID, null));
                 }
             }
         }
